// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<Button
  aria-pressed={false}
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  type="button"
  variant="default"
/>
`;

exports[`should render as selected 1`] = `
<Button
  aria-pressed={true}
  className="button-group-button is-active"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  type="button"
  variant="default"
/>
`;

exports[`should render with icon and text 1`] = `
<Button
  aria-pressed={false}
  className="button-group-button"
  icon={
    <img
      alt="icon"
    />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  text="text"
  type="button"
  variant="default"
/>
`;

exports[`should render with icon and text reversed 1`] = `
<Button
  aria-pressed={false}
  className="button-group-button"
  icon={
    <img
      alt="icon"
    />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={true}
  text="text"
  type="button"
  variant="default"
/>
`;

exports[`should render with icon only 1`] = `
<Button
  aria-pressed={false}
  className="button-group-button"
  icon={
    <img
      alt="icon"
    />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  type="button"
  variant="default"
/>
`;

exports[`should render with text 1`] = `
<Button
  aria-pressed={false}
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  text="text"
  type="button"
  variant="default"
/>
`;
